fixed spacing

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -88,7 +88,6 @@ h2.active {
 
 .alert-login{
   margin-top: 10px;
-  margin-bottom: 10px;
   margin-left: 35px;
   margin-right: 35px;
 }
@@ -109,7 +108,7 @@ h2.active {
   box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
-  margin: 10px 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -374,4 +373,7 @@ input[type=password]:placeholder {
 
 .hide-completely{
   display: none !important;
+}
+.low-alert-margin {
+  margin-bottom: 5px !important;
 }
